port added to IN and OUT

--- a/golden/hello_user_common.yml
+++ b/golden/hello_user_common.yml
@@ -16,18 +16,18 @@ out_code: |
   MEM 2147483756
   MEM 2147483758
   LD 1
-  OUT
-  IN 2
+  OUT 0
+  IN 1 2
   LD 3
-  OUT
+  OUT 0
   LD 2
-  OUT
+  OUT 0
   LD 4
-  OUT
+  OUT 0
   LD 5
-  OUT
+  OUT 0
   LD 2
-  OUT
+  OUT 0
   HLT
   MEM 20
   MEM 62
@@ -137,18 +137,18 @@ out_stdout: |
 out_log: |
   DEBUG   machine:log           INSTR:   0 TICK:   1 PC:   6 ADDR:   0 MEM_OUT: Opcode.JP ACC: 0 OP_REG: 0 COMMAND: JP 6 @0
   DEBUG   machine:log           INSTR:   1 TICK:   3 PC:   7 ADDR:   1 MEM_OUT: 2147483668 ACC: 2147483668 OP_REG: 0 COMMAND: LD 1 @6
-  DEBUG   machine:log           INSTR:   2 TICK:  46 PC:   8 ADDR:  40 MEM_OUT: 10 ACC: 10 OP_REG: 0 COMMAND: OUT @7
-  DEBUG   machine:log           INSTR:   3 TICK:  57 PC:   9 ADDR:  41 MEM_OUT: 4 ACC: 4 OP_REG: 0 COMMAND: IN 2 @8
+  DEBUG   machine:log           INSTR:   2 TICK:  46 PC:   8 ADDR:  40 MEM_OUT: 10 ACC: 10 OP_REG: 0 COMMAND: OUT 0 @7
+  DEBUG   machine:log           INSTR:   3 TICK:  57 PC:   9 ADDR:  41 MEM_OUT: 4 ACC: 4 OP_REG: 0 COMMAND: IN 1 2 @8
   DEBUG   machine:log           INSTR:   4 TICK:  59 PC:  10 ADDR:   3 MEM_OUT: 2147483754 ACC: 2147483754 OP_REG: 0 COMMAND: LD 3 @9
-  DEBUG   machine:log           INSTR:   5 TICK:  64 PC:  11 ADDR: 107 MEM_OUT: 60 ACC: 60 OP_REG: 0 COMMAND: OUT @10
+  DEBUG   machine:log           INSTR:   5 TICK:  64 PC:  11 ADDR: 107 MEM_OUT: 60 ACC: 60 OP_REG: 0 COMMAND: OUT 0 @10
   DEBUG   machine:log           INSTR:   6 TICK:  66 PC:  12 ADDR:   2 MEM_OUT: 2147483689 ACC: 2147483689 OP_REG: 0 COMMAND: LD 2 @11
-  DEBUG   machine:log           INSTR:   7 TICK:  77 PC:  13 ADDR:  45 MEM_OUT: 120 ACC: 120 OP_REG: 0 COMMAND: OUT @12
+  DEBUG   machine:log           INSTR:   7 TICK:  77 PC:  13 ADDR:  45 MEM_OUT: 120 ACC: 120 OP_REG: 0 COMMAND: OUT 0 @12
   DEBUG   machine:log           INSTR:   8 TICK:  79 PC:  14 ADDR:   4 MEM_OUT: 2147483756 ACC: 2147483756 OP_REG: 0 COMMAND: LD 4 @13
-  DEBUG   machine:log           INSTR:   9 TICK:  84 PC:  15 ADDR: 109 MEM_OUT: 10 ACC: 10 OP_REG: 0 COMMAND: OUT @14
+  DEBUG   machine:log           INSTR:   9 TICK:  84 PC:  15 ADDR: 109 MEM_OUT: 10 ACC: 10 OP_REG: 0 COMMAND: OUT 0 @14
   DEBUG   machine:log           INSTR:  10 TICK:  86 PC:  16 ADDR:   5 MEM_OUT: 2147483758 ACC: 2147483758 OP_REG: 0 COMMAND: LD 5 @15
-  DEBUG   machine:log           INSTR:  11 TICK: 105 PC:  17 ADDR: 118 MEM_OUT: 32 ACC: 32 OP_REG: 0 COMMAND: OUT @16
+  DEBUG   machine:log           INSTR:  11 TICK: 105 PC:  17 ADDR: 118 MEM_OUT: 32 ACC: 32 OP_REG: 0 COMMAND: OUT 0 @16
   DEBUG   machine:log           INSTR:  12 TICK: 107 PC:  18 ADDR:   2 MEM_OUT: 2147483689 ACC: 2147483689 OP_REG: 0 COMMAND: LD 2 @17
-  DEBUG   machine:log           INSTR:  13 TICK: 118 PC:  19 ADDR:  45 MEM_OUT: 120 ACC: 120 OP_REG: 0 COMMAND: OUT @18
+  DEBUG   machine:log           INSTR:  13 TICK: 118 PC:  19 ADDR:  45 MEM_OUT: 120 ACC: 120 OP_REG: 0 COMMAND: OUT 0 @18
   DEBUG   machine:simulate      Total instructions: 14
   DEBUG   machine:simulate      Total ticks: 118
   DEBUG   machine:simulate      Output buffer: >What is your name?
