--- a/golden/hello_user_common.yml
+++ b/golden/hello_user_common.yml
@@ -3,7 +3,7 @@ in_source: |-
   (input a)
   (print "<\s" a "\n>\sHi,\s" a "!")
 in_stdin: |-
-  alex
+  Alex Hatson
 out_code: |
   JP 6
   MEM 2147483668
@@ -135,26 +135,26 @@ out_stdout: |
   source LoC: 3 code instr: 15
   ============================================================
   > Hello what is your name?
-  < alex
-  > Hi, alex!
+  < Alex Hatson
+  > Hi, Alex Hatson!
 out_log: |
   DEBUG   machine:log           INSTR:   0 TICK:   1 PC:   6 ADDR:   0 MEM_OUT: Opcode.JP ACC: 0 OP_REG: 0 COMMAND: JP 6 @0
   DEBUG   machine:log           INSTR:   1 TICK:   3 PC:   7 ADDR:   1 MEM_OUT: 2147483668 ACC: 2147483668 OP_REG: 0 COMMAND: LD 1 @6
   DEBUG   machine:log           INSTR:   2 TICK:  60 PC:   8 ADDR:  47 MEM_OUT: 10 ACC: 10 OP_REG: 0 COMMAND: OUT 0 @7
-  DEBUG   machine:log           INSTR:   3 TICK:  71 PC:   9 ADDR:  48 MEM_OUT: 4 ACC: 4 OP_REG: 0 COMMAND: IN 1 2 @8
-  DEBUG   machine:log           INSTR:   4 TICK:  73 PC:  10 ADDR:   3 MEM_OUT: 2147483761 ACC: 2147483761 OP_REG: 0 COMMAND: LD 3 @9
-  DEBUG   machine:log           INSTR:   5 TICK:  80 PC:  11 ADDR: 115 MEM_OUT: 32 ACC: 32 OP_REG: 0 COMMAND: OUT 0 @10
-  DEBUG   machine:log           INSTR:   6 TICK:  82 PC:  12 ADDR:   2 MEM_OUT: 2147483696 ACC: 2147483696 OP_REG: 0 COMMAND: LD 2 @11
-  DEBUG   machine:log           INSTR:   7 TICK:  93 PC:  13 ADDR:  52 MEM_OUT: 120 ACC: 120 OP_REG: 0 COMMAND: OUT 0 @12
-  DEBUG   machine:log           INSTR:   8 TICK:  95 PC:  14 ADDR:   4 MEM_OUT: 2147483764 ACC: 2147483764 OP_REG: 0 COMMAND: LD 4 @13
-  DEBUG   machine:log           INSTR:   9 TICK: 112 PC:  15 ADDR: 123 MEM_OUT: 32 ACC: 32 OP_REG: 0 COMMAND: OUT 0 @14
-  DEBUG   machine:log           INSTR:  10 TICK: 114 PC:  16 ADDR:   2 MEM_OUT: 2147483696 ACC: 2147483696 OP_REG: 0 COMMAND: LD 2 @15
-  DEBUG   machine:log           INSTR:  11 TICK: 125 PC:  17 ADDR:  52 MEM_OUT: 120 ACC: 120 OP_REG: 0 COMMAND: OUT 0 @16
-  DEBUG   machine:log           INSTR:  12 TICK: 127 PC:  18 ADDR:   5 MEM_OUT: 2147483772 ACC: 2147483772 OP_REG: 0 COMMAND: LD 5 @17
-  DEBUG   machine:log           INSTR:  13 TICK: 132 PC:  19 ADDR: 125 MEM_OUT: 33 ACC: 33 OP_REG: 0 COMMAND: OUT 0 @18
+  DEBUG   machine:log           INSTR:   3 TICK:  79 PC:   9 ADDR:  48 MEM_OUT: 11 ACC: 11 OP_REG: 0 COMMAND: IN 1 2 @8
+  DEBUG   machine:log           INSTR:   4 TICK:  81 PC:  10 ADDR:   3 MEM_OUT: 2147483761 ACC: 2147483761 OP_REG: 0 COMMAND: LD 3 @9
+  DEBUG   machine:log           INSTR:   5 TICK:  88 PC:  11 ADDR: 115 MEM_OUT: 32 ACC: 32 OP_REG: 0 COMMAND: OUT 0 @10
+  DEBUG   machine:log           INSTR:   6 TICK:  90 PC:  12 ADDR:   2 MEM_OUT: 2147483696 ACC: 2147483696 OP_REG: 0 COMMAND: LD 2 @11
+  DEBUG   machine:log           INSTR:   7 TICK: 115 PC:  13 ADDR:  59 MEM_OUT: 110 ACC: 110 OP_REG: 0 COMMAND: OUT 0 @12
+  DEBUG   machine:log           INSTR:   8 TICK: 117 PC:  14 ADDR:   4 MEM_OUT: 2147483764 ACC: 2147483764 OP_REG: 0 COMMAND: LD 4 @13
+  DEBUG   machine:log           INSTR:   9 TICK: 134 PC:  15 ADDR: 123 MEM_OUT: 32 ACC: 32 OP_REG: 0 COMMAND: OUT 0 @14
+  DEBUG   machine:log           INSTR:  10 TICK: 136 PC:  16 ADDR:   2 MEM_OUT: 2147483696 ACC: 2147483696 OP_REG: 0 COMMAND: LD 2 @15
+  DEBUG   machine:log           INSTR:  11 TICK: 161 PC:  17 ADDR:  59 MEM_OUT: 110 ACC: 110 OP_REG: 0 COMMAND: OUT 0 @16
+  DEBUG   machine:log           INSTR:  12 TICK: 163 PC:  18 ADDR:   5 MEM_OUT: 2147483772 ACC: 2147483772 OP_REG: 0 COMMAND: LD 5 @17
+  DEBUG   machine:log           INSTR:  13 TICK: 168 PC:  19 ADDR: 125 MEM_OUT: 33 ACC: 33 OP_REG: 0 COMMAND: OUT 0 @18
   DEBUG   machine:simulate      Total instructions: 15
-  DEBUG   machine:simulate      Total ticks: 132
+  DEBUG   machine:simulate      Total ticks: 168
   DEBUG   machine:simulate      Output buffer: > Hello what is your name?
-  < alex
-  > Hi, alex!
+  < Alex Hatson
+  > Hi, Alex Hatson!
   DEBUG   machine:simulate      Execution stopped
